src/objects/Post_RR_to_Team__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Post Resource Request to Team button to post to Groups when new Resource Request is created.</description>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <description>The Forecast Manager of that Role. It&apos;s not the Group OwnerId.</description>
        <label>Owner Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Post RR to Team</label>
</CustomObject>